--- a/src/components/FieldsDiv/styles.css
+++ b/src/components/FieldsDiv/styles.css
@@ -1,36 +1,29 @@
 #fields-div {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    border: green solid thick;
+    justify-content: space-evenly;
+    height: auto;
+    padding: 0;
+}
+
+#fields-div > div {
+    text-decoration: underline darkslategrey;
     height: 40px;
     padding: 0;
-}
-
-#fields-div > * {
-    border: solid thick red;
-    height: 400px;
-    padding: 0;
-}
-
-#fields-div > * {
-    border: solid thin black;
-    padding: 0;
-    /* flex-grow: ; */
+    text-align: center;
 }
 
 #fields-div div:nth-child(1) {
-    flex-grow: 8;
+    max-width: 8%;
+   min-width: 8%;
 }
 
-#fields-div div:nth-child(2), div:nth-child(3), div:nth-child(4) {
-    flex-grow: 20;
+#fields-div div:nth-child(2), #fields-div div:nth-child(3), #fields-div div:nth-child(4) {
+    max-width: 20%;
+    min-width: 20%;
 }
 
 #fields-div div:nth-child(5) {
-    flex-grow: 5;
-}
-
-#fields-div p {
-    text-decoration: underline;
+    max-width: 12%;
+min-width: 12%;
 }
