--- a/src/components/UserDiv/styles.css
+++ b/src/components/UserDiv/styles.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    border: solid thick black;
+    align-items: center;
+    border: solid thick darkslategrey;
+    margin-bottom: 1px;
 }
 
 .user-div > * {
@@ -10,32 +12,35 @@
     padding: 0;
     padding-top: auto;
     padding-bottom: auto;
-    vertical-align: middle;
+    text-align: center;
 }
 
 .user-div div:nth-child(1) {
-    flex-grow: 8;
+    max-width: 8%;
+    min-width: 8%;
     overflow: hidden;
-    text-align: justify;
+    text-align: center;
 }
 
-.user-div div:nth-child(2), div:nth-child(3), div:nth-child(4) {
-    flex-grow: 20;
+.user-div div:nth-child(2),.user-div  div:nth-child(3),.user-div  div:nth-child(4) {
+    max-width: 20%;
+    min-width: 20%;
+    word-wrap: break-word;
 }
-
+a {
+    word-wrap: break-word;
+}
 .user-div div:nth-child(5) {
-    flex-grow: 5;
+    max-width: 12%;
+    min-width: 12%;
 }
 
 .user-div div > p {
-    color: purple;
+    width: inherit;
 }
 
 img {
-    height: inherit;
-    width: inherit;
     max-height: 100%;
-    margin: 0;
+    margin-top: 2px;
     max-width: 100%;
-    
 }
